# ChangeLog for dev-libs/atk
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.24 2003/04/15 23:47:00 foser Exp $

*atk-1.2.3 (15 Apr 2003)

  15 Apr 2003; foser <foser@gentoo.org> atk-1.2.3.ebuild :
  New version

  13 Mar 2003 Olivier Reisch <doctomoe@gentoo.org> atk-1.2.2.ebuild:
  Marked ppc stable

*atk-1.2.2 (21 Jan 2003)

  08 Apr 2003; Todd Sunderlin <todd@gentoo.org> atk-1.2.2.ebuild:
  Marked stable for sparc.

  01 Mar 2003; Jason Wever <weeve@gentoo.org> atk-1.2.2.ebuild:
  Added ~sparc to keywords.

  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> atk-1.2.2.ebuild :
  Mark stable on alpha

  21 Jan 2003; foser <foser@gentoo.org> atk-1.2.2.ebuild :
  New version, fixed ebuild to use gnome2 eclass more

*atk-1.2.1 (13 Jan 2003)
  
  04 Feb 2003; Spider <spider@gentoo.org> atk-1.2.1.ebuild :
  removed DEBUG for DEBUGBUILD

  13 Jan 2003; foser <foser@gentoo.org> atk-1.2.1.ebuild :
  New version

*atk-1.2.0 (22 Dec 2002)

  04 Mar 2003; Jason Wever <weeve@gentoo.org> atk-1.2.0.ebuild:
  Added sparc to keywords.

  04 Feb 2003; Spider <spider@gentoo.org> atk-1.2.0.ebuild :
  removed DEBUG for DEBUGBUILD
      
  06 Jan 2003; Martin Holzer <mholzer@gentoo.org> atk-1.2.0.ebuild :
  Changed RDEPEND=">=dev-libs/glib-2" to RDEPEND=">=dev-libs/glib-2.0.6-r1"
  cause it doesn't work.

  01 Jan 2003; Aron Griffis <agriffis@gentoo.org> atk-1.2.0.ebuild :
  Add ~alpha to KEYWORDS

  22 Dec 2002; foser <foser@gentoo.org> atk-1.2.0.ebuild :
  New version

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*atk-1.1.1 (12 Nov 2002)

  04 Feb 2003; Spider <spider@gentoo.org> atk-1.1.1.ebuild :
  removed DEBUG for DEBUGBUILD

  26 Nov 2002; Jon Nall <nall@gentoo.org> atk-1.1.1.ebuild :
  added ~ppc to KEYWORDS

  12 Nov 2002; foser <foser@gentoo.org> atk-1.1.1.ebuild :
  Gnome 2.1.2 release

*atk-1.1.0 (27 Oct 2002)
