@@ -1,8 +1,8 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/Attic/atk-1.2.3.ebuild,v 1.2 2003/05/13 18:30:28 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/Attic/atk-1.2.4.ebuild,v 1.1 2003/05/13 18:30:28 foser Exp $
 
-inherit libtool gnome2
+inherit gnome2
 
 IUSE="doc"
 S=${WORKDIR}/${P}
@@ -11,14 +11,12 @@ HOMEPAGE="http://developer.gnome.org/projects/gap/"
 
 SLOT="1"
 LICENSE="LGPL-2.1"
-KEYWORDS="x86 ~ppc ~alpha ~sparc"
+KEYWORDS="~x86 ~ppc ~alpha ~sparc"
 
 RDEPEND=">=dev-libs/glib-2"
 
 DEPEND="${RDEPEND}
 	doc? ( >=dev-util/gtk-doc-0.9-r2 )
 	>=dev-util/pkgconfig-0.12.0"
-
-LIBTOOL_FIX="1"
 
 DOCS="AUTHORS ChangeLog COPYING README* INSTALL NEWS"
