@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/atk
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.24 2003/04/15 23:47:00 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/atk/ChangeLog,v 1.25 2003/05/13 18:30:28 foser Exp $
+
+*atk-1.2.4 (13 May 2003)
+
+  13 May 2003; foser <foser@gentoo.org> atk-1.2.4.ebuild :
+  New version
 
 *atk-1.2.3 (15 Apr 2003)
 
